<resources>
    <string name="app_name">life system</string>
    <string name="background_image">background image</string>
    <string name="logo_image">logo image</string>
    <string name="desired_league">Desired league:</string>
    <string name="men">Men</string>
    <string name="women">women</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city">find a team in your city</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a :</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">look for a co-ed beginner league near you ..</string>
</resources>
