<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nour.lifesystem.controller.league">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/foood"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images"
        android:contentDescription="@string/logo_image" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/desired_league"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:layout_editor_absoluteX="10dp">

        <ToggleButton
            android:id="@+id/menleaguebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lifesystem_toggel"
            android:onClick="onMenClick"
            android:text="@string/togglebutton"
            android:textOff="@string/men"
            android:textOn="@string/men"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="184dp"
            tools:text="@string/men" />

        <ToggleButton
            android:id="@+id/womenleaguebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/lifesystem_toggel"
            android:onClick="onWomenClick"
            android:text="@string/togglebutton"
            android:textOff="@string/women"
            android:textOn="@string/women"
            tools:text="@string/women" />

        <ToggleButton
            android:id="@+id/coedleaguebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lifesystem_toggel"
            android:onClick="onCo_EdClick"
            android:text="@string/togglebutton"
            android:textOff="@string/co_ed"
            android:textOn="@string/co_ed"
            tools:text="@string/co_ed" />
    </LinearLayout>

    <Button
        android:id="@+id/leagueNextbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/lifesystem_button"
        android:fontFamily="@font/montserrat"
        android:onClick="leagueNextCilcked"
        android:text="@string/next"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.864" />

</android.support.constraint.ConstraintLayout>
